FrontEnd/src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.main-container {
  min-height: 100vh;
  overflow: hidden;
  display: block;
  position: relative;
  padding-bottom: 100px;
}

.header {
  background-color: #ffffff;
  top: 0;
  position: sticky;
  padding-left: 45px;
  min-height: 8vh;
  display: flex;
  text-align: left;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  font-size: calc(10px + 2vmin);
  color: #303030;
}

body {
  margin-top: 10px;
  background-color: #ffffff;
  min-height: 10vh;
  text-align: left;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body, h1, h2, h3, h4, h5, p, a, ul, li, button {
  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

#nav-custom {
  margin: 20px;
}

.h2-main {
  font-weight: 600;
  color: #303030;
  text-align: left;
}

.h2-center {
  font-weight: 600;
  color: #303030;
  text-align: center;
}

.h5-main {
  font-weight: 600;
  color: #303030;
  text-align: left;
  margin-bottom: 1em;
}

#jumbotron-custom {
  background-color: #ffffff;
  margin: 20px;
  margin-top: 12em;
  margin-bottom: 50px;
}

#dashboard-jumbotron {
  background-color: #ffffff;
  margin-top: 4em;
  margin-bottom: 4em;
}

#center-jumbotron {
  background-color: #ffffff;
  margin-top: 8em;
  margin-bottom: 4em;
}

#col-custom {
  margin-top: 5em;
}

a {
  font-size: 17px;
  font-weight: 600;
  margin: 20px;
  text-decoration: none;
  cursor: pointer;
  color: #303030;
}

a:hover {
  color: #1f74f3;
  text-decoration: none;
}

.btn {
  border-radius: 22px;
}

.btn-filled {
  font-size: 16px;
  font-weight: 600;
  min-height: 40px;
  min-width: 115px;
  margin-right: 20px;
  border-radius: 26px;
  border: 2px solid #2b80ff;
  background-color: #2b80ff;
  color: #ffffff;
  display: block;
  text-decoration: none;
  transition: all 0.3s ease 0s;
}

.btn-filled:hover, .btn-filled:focus, .btn-filled:active, .btn-filled.active {
  border: 2px solid #0066ff;
  background-color: #0066ff;
}

.btn-border {
  font-size: 16px;
  font-weight: 600;
  min-height: 40px;
  min-width: 115px;
  margin-right: 10px;
  border-radius: 26px;
  border: 2px solid #2b80ff;
  background-color: #ffffff00;
  color: #1f74f3;
  text-decoration: none;
}

.btn-border:hover, .btn-border:focus, .btn-border:active, .btn-border.active {
  color: #303030;
  border: 2px solid #303030;
}

.btn-large {
  font-size: 18px;
  font-weight: 600;
  min-height: 50px;
  min-width: 165px;
  margin-top: 45px;
  border-radius: 26px;
  border: 2px solid #2b80ff;
  background-color: #2b80ff;
  color: #ffffff;
  display: block;
  text-decoration: none;
  transition: all 0.3s ease 0s;
}

.btn-large:hover, .btn-large:focus, .btn-large:active, .btn-large.active {
  border: 2px solid #0066ff;
  background-color: #0066ff;
}

.btnBorder-large {
  font-size: 18px;
  font-weight: 600;
  min-height: 50px;
  min-width: 240px;
  margin-top: 45px;
  border-radius: 26px;
  border: 2px solid #2b80ff;
  background-color: #ffffff;
  color: #1f74f3;
  display: block;
  text-decoration: none;
  transition: all 0.3s ease 0s;
}

.btnBorder-large:hover, .btnBorder-large:focus, .btnBorder-large:active, .btnBorder-large.active {
  color: #303030;
  border: 2px solid #303030;
}

footer {
  position: relative;
  height: 50px;
  bottom: 0px;
  width: 100%;
  clear: both;
  text-align: center;
  line-height: 50px;
  background: #0066ff;
  font-size: 15px;
  color: #ffffff;
}

.loginContainer {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  text-align: center;
  padding: 240px;
}

label {
  font-size: 20px;
}

input {
  min-width: 18em;
}

